fix canvas not showing

--- a/src/components/styles/MediaRecorder.css
+++ b/src/components/styles/MediaRecorder.css
@@ -9,7 +9,7 @@
 }
 
 #myVideo {
-  position: relative;
+  position: absolute;
   top: 20%;
   left: 20%;
   width: 600px;
